--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,32 @@
-theme: jekyll-theme-hacker
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+title: Ashwani
+email: ashwanitr001@gmail.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://ashwanitr001.github.io" # the base hostname & protocol for your site
+twitter_username: ashwanitr001
+github_username:  ashwanitr001
+
+permalink:  none
+
+# Build settings
+markdown: kramdown
+
+# /:categories/:title.html
+permalink: none
+
+# URLS
+link_to:
+  facebook:        https://www.facebook.com/kaunteya
+  github:          https://github.com/ashwanitr001
+  twitter:         https://twitter.com/ashwanitr001
+  linkedin:        https://linkedin.com/in/ashwanitr001
+  cocoa_all_pods:  https://cocoapods.org/owners/7316
+  itunes_all_apps: https://itunes.apple.com/us/developer/kaunteya-suryawanshi/id927381428
+  github_profile_pic: https://https://avatars2.githubusercontent.com/u/42508662?s=400&u=b21cae0e7c20898b36f427055d1d74723c664874&v=4
